update: major updates, shineai 2.2.0