@@ -1,21 +1,16 @@
 
 package com.shine.ai.settings;
 
-import com.google.gson.Gson;
-import com.google.gson.JsonArray;
-import com.google.gson.JsonElement;
-import com.google.gson.JsonObject;
+import com.google.gson.*;
 import com.intellij.openapi.application.ApplicationManager;
 import com.intellij.openapi.application.PathManager;
 import com.intellij.openapi.components.PersistentStateComponent;
 import com.intellij.openapi.components.State;
 import com.intellij.openapi.components.Storage;
 import com.intellij.util.xmlb.XmlSerializerUtil;
-import com.intellij.util.xmlb.annotations.Tag;
-import com.shine.ai.icons.AIAssistantIcons;
-import com.shine.ai.message.MsgEntryBundle;
+import com.shine.ai.db.DBPaths;
 import com.shine.ai.util.FileUtil;
-import com.shine.ai.util.GeneratorUtil;
+import com.shine.ai.util.JsonUtil;
 import com.shine.ai.util.StringUtil;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
@@ -25,33 +20,89 @@ import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.*;
 import java.util.stream.Collectors;
-import java.util.stream.IntStream;
 
 import static com.shine.ai.MyToolWindowFactory.*;
 
 @State(
-        name = "com.obiscr.chatgpt.settings.AIAssistantSettingsState",
-        storages = @Storage("ShineAISettingsPlugin.xml")
+        name = "com.shine.ai.settings.AIAssistantSettingsState",
+        storages = @Storage("shineAISettingsPlugin.xml")
 )
 public class AIAssistantSettingsState implements PersistentStateComponent<AIAssistantSettingsState> {
   // 最大存储空间大小 (MB) -  根据你的需求设置
-  public static final double MAX_STORAGE_SIZE_MB = 100;
+  public static final double MAX_STORAGE_SIZE_MB = 1024;
 
   public static final String[] promptsComboboxRolesString = {"user", "system", "assistant"};
 
   public int CHAT_PANEL_FONT_SIZE = 14;
 
-  public String requestTimeout = "60000";
+  public Integer requestTimeout = 60000;
   public Boolean enableHighlightCode = false;
   public Integer promptsPos = 1;
   public Boolean enableLineWarp = true;
   public Boolean enableAvatar = true;
-  public Boolean enableParserCode = false;
+  public Boolean enableMsgPanelAIInfo = true;
+
   public Map<Integer,String> contentOrder = new HashMap<>(){{
-    put(1, CLOUDFLARE_AI_CONTENT_NAME);
+    put(1, OpenAI_CONTENT_NAME );
     put(2, Google_AI_CONTENT_NAME);
-    put(3, GROQ_AI_CONTENT_NAME);
+    put(3, Anthropic_AI_CONTENT_NAME);
   }};
+
+  public Map<Integer,String> AITitleList = new HashMap<>(){{
+    put(1, OpenAI_CONTENT_NAME );
+    put(2, Google_AI_CONTENT_NAME);
+    put(3, Anthropic_AI_CONTENT_NAME);
+    put(4, CLOUDFLARE_AI_CONTENT_NAME);
+    put(5, GROQ_AI_CONTENT_NAME);
+    put(6, OpenRouter_AI_CONTENT_NAME);
+  }};
+
+  public Map<Integer,String> AIKeyList = new HashMap<>(){{
+    put(1, OpenAI_KEY);
+    put(2, Google_AI_KEY);
+    put(3, Anthropic_AI_KEY);
+    put(4, CLOUDFLARE_AI_KEY);
+    put(5, GROQ_AI_KEY);
+    put(6, OpenRouter_AI_KEY);
+  }};
+
+  public Map<Integer,String> AINameList = new HashMap<>(){{
+    put(1, OpenAI_NAME);
+    put(2, Google_AI_NAME);
+    put(3, Anthropic_AI_NAME);
+    put(4, CLOUDFLARE_AI_NAME);
+    put(5, GROQ_AI_NAME);
+    put(6, OpenRouter_AI_NAME);
+  }};
+
+  public Map<Integer,String> AIIconList = new HashMap<>(){{
+    put(1, OpenAI_ICON);
+    put(2, Google_AI_ICON);
+    put(3, Anthropic_AI_ICON);
+    put(4, CLOUDFLARE_AI_ICON);
+    put(5, GROQ_AI_ICON);
+    put(6, OpenRouter_AI_ICON);
+  }};
+
+  public Map<Integer,String> AIAPIList = new HashMap<>(){{
+    put(1, OpenAI_AI_API);
+    put(2, Google_AI_API);
+    put(3, Anthropic_AI_API);
+    put(4, CLOUDFLARE_AI_API);
+    put(5, GROQ_AI_API);
+    put(6, OpenRouter_AI_API);
+  }};
+
+  public Map<Integer,String> AIClassNameList = new HashMap<>(){{
+    put(1, OpenAI_SETTING_CLASS_NAME);
+    put(2, Google_SETTING_CLASS_NAME);
+    put(3, Anthropic_SETTING_CLASS_NAME);
+    put(4, CLOUDFLARE_SETTING_CLASS_NAME);
+    put(5, GROQ_SETTING_CLASS_NAME);
+    put(6, OpenRouter_SETTING_CLASS_NAME);
+  }};
+
+  public List<String> aiVenderList = initAIVenderList();
 
   public Gson gson = new Gson(); // json类方法
 
@@ -69,129 +120,121 @@ public class AIAssistantSettingsState implements PersistentStateComponent<AIAssi
   }
 
   // CF AI
-  public Boolean CFEnableStream = true;
-  public Integer CFStreamSpeed = 50;
-  public String CFCurrentModel = null;
-  public Boolean CFEnablePrompts = false;
-  @Tag("CFModels")
-  public Map<String, String> CFModels = new HashMap<>();
-
-  @Tag("CFPrompts")
-  public List<String> CFPrompts = new ArrayList<>();
-
-  public String CFSetOutputConf = setDefaultSetOutputConf();
-
-  public JsonObject getCFSetOutputConf() {
-    return gson.fromJson(CFSetOutputConf, JsonObject.class);
-  }
-
-  public <T> void setCFSetOutputConf(JsonObject newSetOutputConf) {
-    try {
-      JsonObject setOutputConf = gson.fromJson(CFSetOutputConf, JsonObject.class);
-      // 遍历传入的 JsonObject
-      for (String key : newSetOutputConf.keySet()) {
-        JsonElement value = newSetOutputConf.get(key);
-        setOutputConf.add(key, value); // 添加或替换值
-      }
-      this.CFSetOutputConf = gson.toJson(setOutputConf);
-    } catch (Exception e) {
-      // 处理潜在的异常，例如 JSON 解析错误
-      System.err.println("Error updating CFSetOutputConf: " + e.getMessage());
-      // 可以选择抛出异常或采取其他错误处理措施
-    }
-  }
+  public String CFAISettingInfo = initAISettingInfo();
 
   // Google AI
-  public Boolean GOEnableStream = true;
-  public Integer GOStreamSpeed = 50;
-  public String GOCurrentModel = null;
-  public Boolean GOEnablePrompts = false;
-  @Tag("GOModels")
-  public Map<String, String> GOModels = new HashMap<>();
+  public String GoogleAISettingInfo = initAISettingInfo();
 
-  @Tag("GOPrompts")
-  public List<String> GOPrompts = new ArrayList<>();
+  // Groq AI
+  public String GroqAISettingInfo = initAISettingInfo();
 
-  public String GOSetOutputConf = setDefaultSetOutputConf();
+  // OpenAI
+  public String OpenAISettingInfo = initAISettingInfo();
 
-  public JsonObject getGOSetOutputConf() {
-    return gson.fromJson(GOSetOutputConf, JsonObject.class);
+  // OpenRouter AI
+  public String OpenRouterAISettingInfo = initAISettingInfo();
+
+  // Anthropic AI
+  public String AnthropicAISettingInfo = initAISettingInfo();
+
+
+  private String initAISettingInfo(){
+    JsonObject settingInfo = new JsonObject();
+    settingInfo.addProperty("aiModel", "");
+    settingInfo.addProperty("aiStream", true);
+    settingInfo.addProperty("streamSpeed", 80);
+    settingInfo.addProperty("aiType", "");
+    settingInfo.add("prompts", new JsonArray());
+    settingInfo.addProperty("promptsCutIn", false);
+    settingInfo.addProperty("online", false);
+    settingInfo.add("outputConf", defaultSetOutputConf());
+    settingInfo.addProperty("serverApi", "");
+    settingInfo.addProperty("modelsApi", "");
+    settingInfo.add("apiKeys", new JsonArray());
+    return JsonUtil.getJsonString(settingInfo);
   }
 
-  public <T> void setGOSetOutputConf(JsonObject newSetOutputConf) {
-    try {
-      JsonObject setOutputConf = gson.fromJson(GOSetOutputConf, JsonObject.class);
-      // 遍历传入的 JsonObject
-      for (String key : newSetOutputConf.keySet()) {
-        JsonElement value = newSetOutputConf.get(key);
-        setOutputConf.add(key, value); // 添加或替换值
-      }
-      this.GOSetOutputConf = gson.toJson(setOutputConf);
-    } catch (Exception e) {
-      // 处理潜在的异常，例如 JSON 解析错误
-      System.err.println("Error updating GOSetOutputConf: " + e.getMessage());
-      // 可以选择抛出异常或采取其他错误处理措施
+  public JsonObject getAISettingInfo(String panelName) {
+    String getTarget = null;
+    switch (panelName) {
+      case Google_AI_CONTENT_NAME -> getTarget = GoogleAISettingInfo;
+      case GROQ_AI_CONTENT_NAME -> getTarget = GroqAISettingInfo;
+      case OpenAI_CONTENT_NAME -> getTarget = OpenAISettingInfo;
+      case OpenRouter_AI_CONTENT_NAME -> getTarget = OpenRouterAISettingInfo;
+      case Anthropic_AI_CONTENT_NAME -> getTarget = AnthropicAISettingInfo;
+      default -> getTarget = CFAISettingInfo;
+    }
+    return JsonUtil.getJsonObject(getTarget);
+  }
+
+  public JsonElement getAISettingInfoByKey(String panelName,String keyName) {
+    String getTarget = null;
+    switch (panelName) {
+      case Google_AI_CONTENT_NAME -> getTarget = GoogleAISettingInfo;
+      case GROQ_AI_CONTENT_NAME -> getTarget = GroqAISettingInfo;
+      case OpenAI_CONTENT_NAME -> getTarget = OpenAISettingInfo;
+      case OpenRouter_AI_CONTENT_NAME -> getTarget = OpenRouterAISettingInfo;
+      case Anthropic_AI_CONTENT_NAME -> getTarget = AnthropicAISettingInfo;
+      default -> getTarget = CFAISettingInfo;
+    }
+    JsonObject targetAISettingInfo = JsonUtil.getJsonObject(getTarget);
+    return targetAISettingInfo.get(keyName);
+  }
+
+  public void setAISettingInfo(String panelName,JsonObject settingInfo) {
+    switch (panelName) {
+      case Google_AI_CONTENT_NAME -> GoogleAISettingInfo = setJsonObjectAction(GoogleAISettingInfo,settingInfo);
+      case GROQ_AI_CONTENT_NAME -> GroqAISettingInfo = setJsonObjectAction(GroqAISettingInfo,settingInfo);
+      case OpenAI_CONTENT_NAME -> OpenAISettingInfo = setJsonObjectAction(OpenAISettingInfo,settingInfo);
+      case OpenRouter_AI_CONTENT_NAME -> OpenRouterAISettingInfo = setJsonObjectAction(OpenRouterAISettingInfo,settingInfo);
+      case Anthropic_AI_CONTENT_NAME -> AnthropicAISettingInfo = setJsonObjectAction(AnthropicAISettingInfo,settingInfo);
+      default -> CFAISettingInfo = setJsonObjectAction(CFAISettingInfo,settingInfo);
     }
   }
 
-  // GROQ AI
-  public Boolean GREnableStream = true;
-  public Integer GRStreamSpeed = 50;
-  public String GRCurrentModel = null;
-  public Boolean GREnablePrompts = false;
-  @Tag("GRModels")
-  public Map<String, String> GRModels = new HashMap<>();
+  public void setAISettingInfoByKey(String panelName,String key,JsonElement value) {
+    //
+    JsonObject settingInfo = new JsonObject();
+    settingInfo.add(key, value);
 
-  @Tag("GOPrompts")
-  public List<String> GRPrompts = new ArrayList<>();
-
-  public String GRSetOutputConf = setDefaultSetOutputConf();
-
-  public JsonObject getGRSetOutputConf() {
-    return gson.fromJson(GRSetOutputConf, JsonObject.class);
-  }
-
-  public <T> void setGRSetOutputConf(JsonObject newSetOutputConf) {
-    try {
-      JsonObject setOutputConf = gson.fromJson(GRSetOutputConf, JsonObject.class);
-      // 遍历传入的 JsonObject
-      for (String key : newSetOutputConf.keySet()) {
-        JsonElement value = newSetOutputConf.get(key);
-        setOutputConf.add(key, value); // 添加或替换值
-      }
-      this.GRSetOutputConf = gson.toJson(setOutputConf);
-    } catch (Exception e) {
-      // 处理潜在的异常，例如 JSON 解析错误
-      System.err.println("Error updating GRSetOutputConf: " + e.getMessage());
-      // 可以选择抛出异常或采取其他错误处理措施
+    switch (panelName) {
+      case Google_AI_CONTENT_NAME -> GoogleAISettingInfo = setJsonObjectAction(GoogleAISettingInfo,settingInfo);
+      case GROQ_AI_CONTENT_NAME -> GroqAISettingInfo = setJsonObjectAction(GroqAISettingInfo,settingInfo);
+      case OpenAI_CONTENT_NAME -> OpenAISettingInfo = setJsonObjectAction(OpenAISettingInfo,settingInfo);
+      case OpenRouter_AI_CONTENT_NAME -> OpenRouterAISettingInfo = setJsonObjectAction(OpenRouterAISettingInfo,settingInfo);
+      case Anthropic_AI_CONTENT_NAME -> AnthropicAISettingInfo = setJsonObjectAction(AnthropicAISettingInfo,settingInfo);
+      default -> CFAISettingInfo = setJsonObjectAction(CFAISettingInfo,settingInfo);
     }
   }
 
-  public String setDefaultSetOutputConf() {
+  private String setJsonObjectAction(String target,JsonObject setInfo) {
+    JsonObject targetAISettingInfo = JsonUtil.getJsonObject(target);
+    // 遍历传入的 JsonObject
+    for (String key : setInfo.keySet()) {
+      JsonElement value = setInfo.get(key);
+      targetAISettingInfo.add(key, value); // 添加或替换值
+    }
+    return JsonUtil.getJsonString(targetAISettingInfo);
+  }
+
+  public JsonObject defaultSetOutputConf() {
     JsonObject setInfo = new JsonObject();
-    setInfo.addProperty("temperature",0.5);
+    setInfo.addProperty("temperature",1.0);
     setInfo.addProperty("top_p",1.0);
     setInfo.addProperty("top_k",5);
-    setInfo.addProperty("max_tokens",2048);
+    setInfo.addProperty("frequency_penalty",0);
+    setInfo.addProperty("presence_penalty",0);
+    setInfo.addProperty("max_tokens",4096);
     setInfo.addProperty("history_length",6);
     setInfo.addProperty("summary_swi",true);
     setInfo.addProperty("summary_thr_len",512);
-    return gson.toJson(setInfo);
+    return setInfo;
   }
-
-  // 聊天记录
-  public List<String> AIChatCollection = new ArrayList<>();
 
   @Deprecated
   public List<String> customActionsPrefix = new ArrayList<>();
 
   public static AIAssistantSettingsState getInstance() {
-    AIAssistantSettingsState state = ApplicationManager.getApplication().getServiceIfCreated(AIAssistantSettingsState.class);
-    if (state == null) {
-      saveState();
-    }else {
-      return state;
-    }
     return ApplicationManager.getApplication().getService(AIAssistantSettingsState.class);
   }
 
@@ -214,179 +257,106 @@ public class AIAssistantSettingsState implements PersistentStateComponent<AIAssi
     ApplicationManager.getApplication().saveSettings(); // 保存更改
   }
 
-  public String createChatCollection() {
-    JsonObject chatCollection = new JsonObject();
-    chatCollection.addProperty("collId", GeneratorUtil.generateUniqueId());
-    chatCollection.addProperty("createat",GeneratorUtil.getTimestamp());
-    chatCollection.addProperty("updateat",GeneratorUtil.getTimestamp());
-    chatCollection.addProperty("collectionTitle","");
-    chatCollection.addProperty("collectionSubTitle","");
-    chatCollection.add("collectionExtra",null);
-
-    JsonArray chatList = new JsonArray();
-
-    JsonObject chatItem = new JsonObject();
-    chatItem.addProperty("time", GeneratorUtil.getTimestamp());
-    chatItem.addProperty("icon", AIAssistantIcons.AI_URL);
-    chatItem.addProperty("name", MsgEntryBundle.message("ui.setting.server.default.name"));
-    chatItem.addProperty("content", "有什么可以帮你的吗？");
-    chatItem.addProperty("isMe", false);
-    chatItem.addProperty("role", "assistant");
-    chatItem.addProperty("status", 1);
-    chatItem.addProperty("chatId", GeneratorUtil.generateUniqueId());
-    chatItem.addProperty("isPin", false);
-    chatItem.addProperty("showBtn", false);
-    chatItem.addProperty("withContent", "");
-    // 附件。数组格式
-    chatItem.add("attachments", new JsonArray());
-
-    chatList.add(chatItem);
-
-    // 使用JsonArray添加数组元素
-    chatCollection.add("chatList", chatList);
-
-    return gson.toJson(chatCollection);
+  public boolean currentModelCanOnline(String panelName,String model) {
+    boolean isCan = false;
+    switch (panelName) {
+      case Google_AI_CONTENT_NAME -> isCan = true;
+      case GROQ_AI_CONTENT_NAME, OpenAI_CONTENT_NAME, OpenRouter_AI_CONTENT_NAME, Anthropic_AI_CONTENT_NAME -> {}
+      default -> {}
+    }
+    return isCan;
   }
 
-  public void deleteChatCollectionById(String collectionId) {
-    if (collectionId.isEmpty()) return;
-    Iterator<String> iterator = AIChatCollection.iterator();
-    while (iterator.hasNext()) {
-      String item = iterator.next();
-      JsonObject collectionItem = gson.fromJson(item, JsonObject.class);
-      if (collectionItem.has("collId") && Objects.equals(collectionItem.get("collId").getAsString(), collectionId)) {
-        iterator.remove();
+  public boolean currentModelCanImage(String panelName,String model,JsonArray modelList) {
+    boolean isCan = false;
+    switch (panelName) {
+      case Google_AI_CONTENT_NAME -> isCan = true;
+      case GROQ_AI_CONTENT_NAME -> {
+        for (JsonElement mod : modelList) {
+          // 根据 model 获取对应的值，例如从另一个数组或其他数据源中获取
+          JsonObject llm = mod.getAsJsonObject();
+            if (llm.has("id")) {
+              String llmId = llm.get("id").getAsString();
+              if (llmId.contains("llama-4") && llmId.equals(model)) {
+                isCan = true;
+              }
+            }
+        }
       }
+      case OpenRouter_AI_CONTENT_NAME -> {
+        for (JsonElement mod : modelList) {
+          // 根据 model 获取对应的值，例如从另一个数组或其他数据源中获取
+          JsonObject llm = mod.getAsJsonObject();
+          if (llm.has("architecture") && llm.get("architecture").isJsonObject()) {
+            JsonObject architectureObject = llm.get("architecture").getAsJsonObject();
+            if (architectureObject.has("input_modalities") && architectureObject.get("input_modalities").isJsonArray()) {
+              JsonArray input_modalities = architectureObject.get("input_modalities").getAsJsonArray();
+              if (input_modalities.contains(new JsonPrimitive("image"))) {
+                if (llm.has("id")) {
+                  // 根据 model 获取对应的值，例如从另一个数组或其他数据源中获取
+                  if (StringUtil.equals(model,llm.get("id").getAsString())) {
+                    isCan = true;
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+      case OpenAI_CONTENT_NAME, Anthropic_AI_CONTENT_NAME -> {}
+      default -> {}
     }
+    return isCan;
   }
 
-  public void updateChatCollectionInfo(JsonObject collectionItem) {
-    JsonArray chatList = collectionItem.get("chatList").getAsJsonArray();
-    String collId = collectionItem.get("collId").getAsString();
-    String collTitle = "";
-    String collSubTitle = "";
-    if (!chatList.isEmpty()) {
-      int idxj = IntStream.range(0, chatList.size())
-              .filter(i -> chatList.get(i).getAsJsonObject().get("isMe").getAsBoolean() && !chatList.get(i).getAsJsonObject().get("content").getAsString().isEmpty())
-              .findFirst()
-              .orElse(-1);
-      if (idxj >= 0) collTitle = chatList.get(idxj).getAsJsonObject().get("content").getAsString();
-      int idxk = IntStream.range(0, chatList.size())
-              .filter(i -> i !=0 && !chatList.get(i).getAsJsonObject().get("isMe").getAsBoolean() && !chatList.get(i).getAsJsonObject().get("content").getAsString().isEmpty())
-              .findFirst()
-              .orElse(-1);
-      if (idxk >= 0) collSubTitle = chatList.get(idxk).getAsJsonObject().get("content").getAsString();
+  private List<String> initAIVenderList() {
+    List<String> AIList = new ArrayList<>();
+    for (int i = 0 ; i < AITitleList.size() ; i++) {
+      JsonObject obj = new JsonObject();
+      obj.addProperty("title", AITitleList.get(i+1));
+      obj.addProperty("key", AIKeyList.get(i+1));
+      obj.addProperty("name", AINameList.get(i+1));
+      obj.addProperty("icon", AIIconList.get(i+1));
+      obj.addProperty("className", AIClassNameList.get(i+1));
+      obj.addProperty("api", AIAPIList.get(i+1));
+      AIList.add(JsonUtil.getJsonString(obj));
     }
-    int upIndex = IntStream.range(0, AIChatCollection.size())
-            .filter(i -> StringUtil.equals(getJsonObject(AIChatCollection.get(i)).get("collId").getAsString(), collId))
-            .findFirst()
-            .orElse(-1);
-    if (upIndex >= 0) {
-      JsonObject setCollectionItem = getJsonObject(AIChatCollection.get(upIndex));
-      setCollectionItem.addProperty("updateat",GeneratorUtil.getTimestamp());
-      setCollectionItem.addProperty("collectionTitle",collTitle);
-      setCollectionItem.addProperty("collectionSubTitle",collSubTitle);
-      setCollectionItem.add("chatList",chatList);
-      AIChatCollection.set(upIndex,getJsonString(setCollectionItem));
-    }
-    AIChatCollection = AIChatCollection.stream()
-            .sorted(((o1, o2) -> Long.compare(getJsonObject(o2).get("updateat").getAsLong(), getJsonObject(o1).get("updateat").getAsLong())))
+    return AIList;
+  }
+
+  public List<JsonObject> getAIVenderList() {
+    return aiVenderList.stream()
+            .map(JsonUtil::getJsonObject)   // 将这些元素强制转换为 JsonObject
             .collect(Collectors.toList());
   }
 
-  public void deleteChatCollectionByItem(String collectionItem) {
-    if (collectionItem.isEmpty()) return;
-    AIChatCollection.remove(collectionItem);
-  }
-
-  public JsonObject getJsonObject(String jsonString) {
-    JsonObject outputObject = new JsonObject();
-    try {
-      outputObject = gson.fromJson(jsonString,JsonObject.class);
-    } catch (Exception e) {
-      System.out.println("getJsonObject: exception" + e.getMessage());
-    }
-    return outputObject;
-  }
-
-  public <T> JsonArray createJsonArray(List<T> list) {
-    JsonArray jsonArray = new JsonArray();
-    for (T item : list) {
-      try {
-        jsonArray.add(gson.toJsonTree(item));
-      } catch (Exception e) {
-        System.err.println("createJsonArray: exception" + e.getMessage());
-      }
-    }
-    return jsonArray;
-  }
-
-  public JsonArray getJsonArray(List<JsonObject> list) {
-    JsonArray jsonArray = new JsonArray();
-    for (JsonObject item : list) {
-      try {
-        jsonArray.add(item);
-      } catch (Exception e) {
-        System.err.println("getJsonArray: exception" + e.getMessage());
-      }
-    }
-    return jsonArray;
-  }
-
-  public JsonArray getJsonArrayByString(List<String> list) {
-    JsonArray jsonArray = new JsonArray();
-    for (String item : list) {
-      try {
-        jsonArray.add(gson.fromJson(item,JsonObject.class));
-      } catch (Exception e) {
-        System.err.println("getJsonArrayByString: exception" + e.getMessage());
-      }
-    }
-    return jsonArray;
-  }
-
-  public String getJsonString(JsonObject object) {
-    String outputString = "";
-    try {
-      outputString = gson.toJson(object);
-    } catch (Exception e) {
-      System.out.println("getJsonString: exception" + e.getMessage());
-    }
-    return outputString;
-  }
-
-  public JsonObject mergeJsonObject(JsonObject target, JsonObject source) {
-    JsonObject merged = new JsonObject();//创建一个新的JsonObject
-    target.entrySet().forEach(entry-> merged.add(entry.getKey(), entry.getValue()));
-    source.entrySet().forEach(entry -> merged.add(entry.getKey(), entry.getValue()));
-    return merged;
-  }
-
-  public Integer getStorageUsagePercentage() {
-    try {
-      Path optionDir = Path.of(PathManager.getOptionsPath());
-      Path storageFile = Paths.get(optionDir.toString(), "ShineAISettingsPlugin.xml");
-      long fileSizeBytes = Files.size(storageFile);
-      double fileSizeMB = fileSizeBytes / (1024.0 * 1024.0);
-      // 计算百分比，并限制在 0-100 之间
-      return (int) Math.max(0, Math.min(100, (fileSizeMB / MAX_STORAGE_SIZE_MB) * 100));
-    } catch (Exception e) {
-      System.out.println("getStorageUsagePercentage: exception" + e.getMessage());
-    }
-    return 0;
-  }
+//  public Integer getStorageUsagePercentage() {
+//    try {
+//      Path optionDir = Path.of(PathManager.getOptionsPath());
+//      Path settingsFile = Paths.get(optionDir.toString(), "shineAISettingsPlugin.xml");
+//      Path dbDataFile = Paths.get(PathManager.getConfigPath(),"data");
+//      long fileSizeBytes = Files.size(settingsFile) + Files.size(dbDataFile);
+//      double fileSizeMB = fileSizeBytes / (1024.0 * 1024.0);
+//      // 计算百分比，并限制在 0-100 之间
+//      return (int) Math.max(0, Math.min(100, (fileSizeMB / MAX_STORAGE_SIZE_MB) * 100));
+//    } catch (Exception e) {
+//      System.out.println("getStorageUsagePercentage: exception" + e.getMessage());
+//    }
+//    return 0;
+//  }
 
   public String getStorageUsageMBInfo() {
     try {
       Path optionDir = Path.of(PathManager.getOptionsPath());
-      Path storageFile = Paths.get(optionDir.toString(), "ShineAISettingsPlugin.xml");
-      long fileSizeBytes = Files.size(storageFile);
+      Path settingsFile = Paths.get(optionDir.toString(), "shineAISettingsPlugin.xml");
+      Path dbDataDir = DBPaths.dbPath;
+      long fileSizeBytes = Files.size(settingsFile) + FileUtil.getFolderSize(dbDataDir.toFile());
       double fileSizeMB = fileSizeBytes / (1024.0 * 1024.0);
-      return String.format("%.2f",fileSizeMB) + "mb" + "/" + MAX_STORAGE_SIZE_MB + "mb";
+      return String.format("%.2f",fileSizeMB) + "mb";
     } catch (Exception e) {
       System.out.println("getStorageUsageMBInfo: exception" + e.getMessage());
     }
-    return "0mb" + "/" + MAX_STORAGE_SIZE_MB + "mb";
+    return "0mb";
   }
 
   public String getCacheUsageMBInfo() {
